src/objects/Assessment_Question_Option__c.object
<CustomObject>
    <description>ASSESSMENT  - Potential Question Responses and Detailed Descriptions</description>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QT__c</fullName>
        <formula>Question__r.Question_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Relationship to Question Table</description>
        <label>Question</label>
        <referenceTo>Assessment_Question__c</referenceTo>
        <relationshipLabel>Assessment Question Options</relationshipLabel>
        <relationshipName>Assessment_Question_Option</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rating_Description__c</fullName>
        <description>Detailed description of the rating</description>
        <label>Rating Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>Rating / Score potential Values</description>
        <label>Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>The Score for this Rating</description>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show_Extra_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Extra Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_these_fields__c</fullName>
        <description>a csv of all fields that will show when selecting this option</description>
        <label>Show these fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Assessment Question Option</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Color__c</columns>
        <columns>Question__c</columns>
        <columns>Rating__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Rating_Description__c</columns>
        <columns>Score__c</columns>
        <columns>Show_these_fields__c</columns>
        <columns>QT__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>QuestionDetailID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Question Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>